@@ -123,27 +123,6 @@ public class XQuery extends Interpreter
 
   static XQuery instance;
 
-  public static void loadClass(String name, Environment env)
-    throws java.lang.ClassNotFoundException
-  {
-    try
-      {
-	Class clas = Class.forName(name);
-	Object inst = clas.newInstance ();
-	defineAll(inst, env);
-	if (inst instanceof gnu.expr.ModuleBody)
-	  ((gnu.expr.ModuleBody)inst).run();
-      }
-    catch (java.lang.ClassNotFoundException ex)
-      {
-	throw ex;
-      }
-    catch (Exception ex)
-      {
-	throw new WrappedException(ex);
-      }
-  }
-
   static int envCounter = 0;
 
   public XQuery()
@@ -174,10 +153,10 @@ public class XQuery extends Interpreter
     try
       {
 	// Force it to be loaded now, so we can over-ride let* length etc.
-	loadClass("kawa.lib.std_syntax", environ);
-	loadClass("kawa.lib.lists", environ);
-	loadClass("kawa.lib.strings", environ);
-	loadClass("gnu.commonlisp.lisp.PrimOps", environ);
+	loadClass("kawa.lib.std_syntax");
+	loadClass("kawa.lib.lists");
+	loadClass("kawa.lib.strings");
+	loadClass("gnu.commonlisp.lisp.PrimOps");
       }
     catch (java.lang.ClassNotFoundException ex)
       {
@@ -240,7 +219,7 @@ public class XQuery extends Interpreter
 
   public Consumer getOutputConsumer(OutPort out)
   {
-    return new XMLPrinter(out);
+    return new XMLPrinter(out, false);
   }
 
   LangPrimType booleanType;
@@ -266,44 +245,6 @@ public class XQuery extends Interpreter
 	return Scheme.getNamedType(name);
       }
     return Type.make(clas);
-  }
-
-  /** Import all the public fields of an object. */
-  public static void defineAll(Object object, Environment env)
-  {
-    Class clas = object.getClass();
-    java.lang.reflect.Field[] fields = clas.getFields();
-    for (int i = fields.length;  --i >= 0; )
-      {
-	java.lang.reflect.Field field = fields[i];
-	String name = field.getName();
-	if ((field.getModifiers() & java.lang.reflect.Modifier.FINAL) != 0)
-	  {
-	    try
-	      {
-		Object part = field.get(object);
-		if (part instanceof Named)
-		  name = ((Named) part).getName();
-		else if (part instanceof kawa.lang.Syntax) // FIXME
-		  name = ((kawa.lang.Syntax) part).getName();
-		else
-		  name = name.intern();
-		if (part instanceof Binding)
-		  env.addBinding((Binding) part);
-		else
-		  env.define(name, part);
-	      }
-	    catch (Exception ex)
-	      {
-		throw new WrappedException("error accessing field "+field, ex);
-	      }
-	  }
-	else
-	  {
-	    System.err.println("INTERNAL ERROR in XQuery.defineAll for "+name
-+" in "+clas);
-	  }
-      }
   }
 
   public Procedure getPrompter()
